--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,8 @@ services:
         container_name: django
         working_dir: /home/dawid/PycharmProjects/PythonProject1
         command: >
-            sh -c "python manage.py migrate &&
+            sh -c "python manage.py makemigrations &&
+                    python manage.py migrate &&
                     python manage.py runserver 0.0.0.0:8000"
         volumes:
             - .:/home/dawid/PycharmProjects/PythonProject1
@@ -22,6 +23,6 @@ services:
         - POSTGRES_PASSWORD=postgres
         healthcheck:
             test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-            interval: 10s
+            interval: 5s
             retries: 5
             timeout: 5s
