--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,18 @@
+volumes:
+    db-data:
+        name: db-data
+
 services:
     django:
-        build: .
+        build:
+            context: .
         container_name: django
-        working_dir: /home/dawid/Documents/GitHub/Projekt
+        volumes:
+            -   ./:/app
+        working_dir: /app
         command: >
             sh -c "python manage.py migrate &&
                     python manage.py runserver 0.0.0.0:8000"
-        volumes:
-            - .:/home/dawid/Documents/GitHub/Projekt
         ports:
             - "8000:8000"
         depends_on:
@@ -20,6 +25,9 @@ services:
         - POSTGRES_DB=postgres
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=postgres
+        - PGDATA=/var/lib/postgres/data
+        volumes:
+            - db-data:/var/lib/postgres/data
         healthcheck:
             test: [ "CMD-SHELL", "pg_isready -U postgres" ]
             interval: 5s
