--- a/compose.yaml
+++ b/compose.yaml
@@ -11,8 +11,7 @@ services:
             -   ./:/app
         working_dir: /app
         command: >
-            sh -c "python manage.py migrate &&
-                    python manage.py runserver 0.0.0.0:8000"
+            sh -c "python manage.py runserver 0.0.0.0:8000"
         ports:
             - "8000:8000"
         depends_on:
