--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ Django==5.1.6
 mysqlclient>=2.2.7
 python-dotenv>=1.0.1
 pillow>=11.2
-django-bootstrap5==25.1
+django-crispy-forms==2.4
+crispy-bootstrap5==2025.4
